--- a/jade/index.jade
+++ b/jade/index.jade
@@ -3,7 +3,7 @@ html(lang='en')
   include head.jade
   body
     .credits
-      a(href='https://codepen.io/Alca/') Jacob Foster
+      a(href='https://alca.tv') Jacob Foster
       = ' | '
       a(href='https://www.gsw.nyc') Greg Walden
     include scripts.jade
