--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,9 +1,9 @@
 doctype html
 html(lang='en')
-  include head.jade
+  include head
   body
     .credits
       a(href='https://alca.tv') Jacob Foster
       = ' | '
       a(href='https://www.gsw.nyc') Greg Walden
-    include scripts.jade
+    include scripts
