--- a/pug/head.pug
+++ b/pug/head.pug
@@ -4,7 +4,7 @@ head
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
   meta(name='viewport', content='width=device-width, initial-scale=1')
 
-  include seo.jade
+  include seo
 
   link(href='https://fonts.googleapis.com/css?family=Roboto+Mono', rel='stylesheet')
   style.
